# quant-research-lab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dashboard/: __init__.py  app.py  core.py  event_app.py  lab_app.py  main_app.py  strategy_app.py
dashboard_data/: fwdpe_bench.parquet  ml_alpha.json  ml_signal_meta.json  pullback_bench.parquet  pullback_gm.parquet  pullback_mv.parquet  pullback_pftyoy.parquet  pullback_revyoy.parquet  pullback_roe.parquet  pullback_sector.parquet  pullback_sret.parquet  saved_config.json  search2_results.json  search_results.json  stable_largecap.json  strategy_family.json
docs/: PROGRESS.md  original-todo.txt  roadmap.md  signal-rigor-and-returns.md  strategy-assessment.md
examples/: build_dataset.py  build_fundamentals_full.py  capacity_curve.py  check_symbol.py  compare_exits.py  compare_strategies.py  confirm_strategies.py  converge_universe_audit.py  diag_mvfloor.py  download_announce_dates.py  download_fundamentals.py  enrich_panel.py  event_strategy.py  event_viz_data.py  factor_backtest.py  factor_zoo_research.py  feature_expansion.py  fetch_universe_audit.py  forecast_event_strategy.py  forward_pe_screen.py  long_only_portfolio.py  ml_alpha.py  ml_breadth_hedge.py  ml_gru_fusion.py  ml_ic_altdata.py  ml_ic_experiments.py  ml_ic_experiments2.py  ml_ic_stability.py  ml_rolling_hedge.py  ml_signal_deciles.py  ml_signal_longshort.py  ml_signal_versions.py  ml_target_search.py  ml_trade.py  monthly_price_factors.py  multifactor_backtest.py  optimism_budget.py  precompute_barra_attribution.py  (+28 more)
(+46 files in other folders)
